--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1084,7 +1084,7 @@ section,
   color: var(--contrast-color);
 }
 
-.contact .php-email-form {
+.contact .form-send {
   background-color: var(--surface-color);
   height: 100%;
   padding: 30px;
@@ -1092,14 +1092,14 @@ section,
 }
 
 @media (max-width: 575px) {
-  .contact .php-email-form {
+  .contact .form-send {
     padding: 20px;
   }
 }
 
-.contact .php-email-form input[type=text],
-.contact .php-email-form input[type=email],
-.contact .php-email-form textarea {
+.contact .form-send input[type=text],
+.contact .form-send input[type=email],
+.contact .form-send textarea {
   font-size: 14px;
   padding: 10px 15px;
   box-shadow: none;
@@ -1109,9 +1109,9 @@ section,
   border-color: color-mix(in srgb, var(--default-color), transparent 80%);
 }
 
-.contact .php-email-form input[type=text]:focus,
-.contact .php-email-form input[type=email]:focus,
-.contact .php-email-form textarea:focus {
+.contact .form-send input[type=text]:focus,
+.contact .form-send input[type=email]:focus,
+.contact .form-send textarea:focus {
   border-color: var(--accent-color);
 }
 
@@ -1121,7 +1121,7 @@ section,
   color: color-mix(in srgb, var(--default-color), transparent 70%);
 }
 
-.contact .php-email-form button[type=submit] {
+.contact .form-send button[type=submit] {
   color: var(--contrast-color);
   background: var(--accent-color);
   border: 0;
@@ -1130,7 +1130,7 @@ section,
   border-radius: 50px;
 }
 
-.contact .php-email-form button[type=submit]:hover {
+.contact .form-send button[type=submit]:hover {
   background: color-mix(in srgb, var(--accent-color), transparent 25%);
 }
 
